Fix header overlap issue in pdf generated files

--- a/app/assets/stylesheets/spree/backend/override_pdf.css
+++ b/app/assets/stylesheets/spree/backend/override_pdf.css
@@ -69,3 +69,15 @@ th {
   background: #162e40;
   height: 50;
 }
+
+thead {
+  display: table-header-group
+}
+
+tfoot {
+  display: table-row-group
+}
+
+tr {
+  page-break-inside: avoid
+}
